# ytsched2

./: .gitignore  README.md  Ytsched.src  entry_points.cfg  install.sh  setup.cfg  setup.py  static  templates
webroot/static/css/: my.css  pagetop.css
webroot/static/js/: execpost.js  my.js  my_cookie.js  pagetop.js
webroot/templates/: base.html  day.html  edit.html  footer.html  head.html  main.html  page1.html  sde.html
ytsched/: __init__.py  __main__.py  cmd_handler.py  day_handler.py  edit_handler.py  handler.py  handler1.py  main_handler.py  webapp.py  wshandler1.py  ytsched.py
