[metadata]
name = ytsched
version = attr: ytsched.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = ytsched: YT Scheduler
long_description = file: README.md
url = https://github.com/ytani01/Template.git
license = MIT
classifier =
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
    html2text
    tornado
    monthdelta
entry_points = file: entry_points.cfg
